force-app/main/default/objects/lightningbuddy__Actions__c/lightningbuddy__Actions__c.object-meta.xml
<CustomObject>
    <description>Object that captures actions to be taken when the usr hits a specific URL/type of page.</description>
    <label>Actions</label>
    <nameField>
        <label>Guideme Actions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>