force-app/main/default/objects/lightningbuddy__Actions__c/fields/lightningbuddy__Action_Text__c.field-meta.xml
<CustomField>
    <fullName>lightningbuddy__Action_Text__c</fullName>
    <label>Action Text</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>