force-app/main/default/objects/lightningbuddy__Actions__c/fields/lightningbuddy__Enabled_Profiles__c.field-meta.xml
<CustomField>
    <fullName>lightningbuddy__Enabled_Profiles__c</fullName>
    <inlineHelpText>Comma separated list of profiles that should have this action triggered.</inlineHelpText>
    <label>Enabled Profiles</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>