force-app/main/default/objects/lightningbuddy__Actions__c/fields/lightningbuddy__Image_Carousel_Config__c.field-meta.xml
<CustomField>
    <fullName>lightningbuddy__Image_Carousel_Config__c</fullName>
    <label>Image Carousel Config</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>