force-app/main/default/objects/lightningbuddy__Actions__c/fields/lightningbuddy__Object__c.field-meta.xml
<CustomField>
    <fullName>lightningbuddy__Object__c</fullName>
    <label>Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>