force-app/main/default/objects/lightningbuddy__Actions__c/fields/lightningbuddy__Page_Type__c.field-meta.xml
<CustomField>
    <fullName>lightningbuddy__Page_Type__c</fullName>
    <label>Page Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Record Home</fullName>
            </value>
            <value>
                <fullName>Chatter Group Detail</fullName>
            </value>
            <value>
                <fullName>Dashboards Home</fullName>
            </value>
            <value>
                <fullName>Record Detail</fullName>
            </value>
            <value>
                <fullName>Reports Home</fullName>
            </value>
            <value>
                <fullName>Task Detail From List</fullName>
            </value>
            <value>
                <fullName>Task home</fullName>
            </value>
            <value>
                <fullName>Record Update</fullName>
            </value>
            <value>
                <fullName>Chatter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>