force-app/main/default/objects/lightningbuddy__Actions__c/fields/lightningbuddy__Popover_Text__c.field-meta.xml
<CustomField>
    <fullName>lightningbuddy__Popover_Text__c</fullName>
    <label>Popover Text</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>