force-app/main/default/objects/lightningbuddy__Actions__c/fields/lightningbuddy__Quick_Action_API_Name__c.field-meta.xml
<CustomField>
    <fullName>lightningbuddy__Quick_Action_API_Name__c</fullName>
    <label>Quick Action API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>