force-app/main/default/objects/lightningbuddy__Actions__c/fields/lightningbuddy__Record_Id__c.field-meta.xml
<CustomField>
    <fullName>lightningbuddy__Record_Id__c</fullName>
    <label>Record Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>