force-app/main/default/objects/lightningbuddy__Actions__c/fields/lightningbuddy__Record_Type__c.field-meta.xml
<CustomField>
    <fullName>lightningbuddy__Record_Type__c</fullName>
    <label>Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>