force-app/main/default/objects/lightningbuddy__Actions__c/fields/lightningbuddy__Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>lightningbuddy__Record_Type_Name__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type Name</label>
    <type>Text</type>
</CustomField>