force-app/main/default/objects/lightningbuddy__Actions__c/fields/lightningbuddy__Record_Update_Criteria__c.field-meta.xml
<CustomField>
    <fullName>lightningbuddy__Record_Update_Criteria__c</fullName>
    <label>Record Update Criteria</label>
    <type>TextArea</type>
</CustomField>