force-app/main/default/objects/lightningbuddy__Actions__c/fields/lightningbuddy__Subtab_Name__c.field-meta.xml
<CustomField>
    <fullName>lightningbuddy__Subtab_Name__c</fullName>
    <label>Subtab Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>