force-app/main/default/objects/lightningbuddy__Actions__c/fields/lightningbuddy__Toaster_Alert_Duration__c.field-meta.xml
<CustomField>
    <fullName>lightningbuddy__Toaster_Alert_Duration__c</fullName>
    <defaultValue>5</defaultValue>
    <inlineHelpText>Duration in seconds after which the alert will dismiss itself.</inlineHelpText>
    <label>Toaster Alert Duration</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>