force-app/main/default/objects/lightningbuddy__Actions__c/fields/lightningbuddy__Toaster_Alert_Icon__c.field-meta.xml
<CustomField>
    <fullName>lightningbuddy__Toaster_Alert_Icon__c</fullName>
    <inlineHelpText>Icon displayed when type=&apos;other&apos;</inlineHelpText>
    <label>Toaster Alert Icon</label>
    <length>80</length>
    <type>Text</type>
</CustomField>