force-app/main/default/objects/lightningbuddy__Actions__c/fields/lightningbuddy__Toaster_Alert_Message__c.field-meta.xml
<CustomField>
    <fullName>lightningbuddy__Toaster_Alert_Message__c</fullName>
    <inlineHelpText>A message to display on the toaster alert action. Can also be a parameterized message.</inlineHelpText>
    <label>Toaster Alert Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>