force-app/main/default/objects/lightningbuddy__Actions__c/fields/lightningbuddy__Toaster_Alert_Title__c.field-meta.xml
<CustomField>
    <fullName>lightningbuddy__Toaster_Alert_Title__c</fullName>
    <label>Toaster Alert Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>