force-app/main/default/objects/lightningbuddy__Actions__c/fields/lightningbuddy__Toaster_Alert_Type__c.field-meta.xml
<CustomField>
    <fullName>lightningbuddy__Toaster_Alert_Type__c</fullName>
    <label>Toaster Alert Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>other</fullName>
                <default>true</default>
                <label>other</label>
            </value>
            <value>
                <fullName>info</fullName>
            </value>
            <value>
                <fullName>warning</fullName>
            </value>
            <value>
                <fullName>success</fullName>
            </value>
            <value>
                <fullName>error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>