force-app/main/default/objects/lightningbuddy__Actions__c/fields/lightningbuddy__Video_Link__c.field-meta.xml
<CustomField>
    <fullName>lightningbuddy__Video_Link__c</fullName>
    <label>Video Link</label>
    <type>Url</type>
</CustomField>