force-app/main/default/objects/lightningbuddy__Actions__c/fields/lightningbuddy__Welcome_Mat_Body__c.field-meta.xml
<CustomField>
    <fullName>lightningbuddy__Welcome_Mat_Body__c</fullName>
    <label>Welcome Mat Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>