force-app/main/default/objects/lightningbuddy__Actions__c/fields/lightningbuddy__Welcome_Mat_Main_Image__c.field-meta.xml
<CustomField>
    <fullName>lightningbuddy__Welcome_Mat_Main_Image__c</fullName>
    <label>Welcome Mat Main Image</label>
    <type>Url</type>
</CustomField>