force-app/main/default/objects/lightningbuddy__Actions__c/fields/lightningbuddy__Welcome_Mat_Title__c.field-meta.xml
<CustomField>
    <fullName>lightningbuddy__Welcome_Mat_Title__c</fullName>
    <label>Welcome Mat Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>