force-app/main/default/objects/lightningbuddy__Actions__c/recordTypes/lightningbuddy__File.recordType-meta.xml
<RecordType>
    <fullName>lightningbuddy__File</fullName>
    <active>true</active>
    <label>File</label>
</RecordType>