force-app/main/default/objects/lightningbuddy__Actions__c/recordTypes/lightningbuddy__Flow.recordType-meta.xml
<RecordType>
    <fullName>lightningbuddy__Flow</fullName>
    <active>true</active>
    <label>Flow</label>
</RecordType>