force-app/main/default/objects/lightningbuddy__Actions__c/recordTypes/lightningbuddy__Image_Carousel.recordType-meta.xml
<RecordType>
    <fullName>lightningbuddy__Image_Carousel</fullName>
    <active>true</active>
    <label>Image Carousel</label>
</RecordType>