force-app/main/default/objects/lightningbuddy__Actions__c/recordTypes/lightningbuddy__Object_Quick_Action.recordType-meta.xml
<RecordType>
    <fullName>lightningbuddy__Object_Quick_Action</fullName>
    <active>true</active>
    <label>Object Quick Action</label>
</RecordType>