force-app/main/default/objects/lightningbuddy__Actions__c/recordTypes/lightningbuddy__Popover.recordType-meta.xml
<RecordType>
    <fullName>lightningbuddy__Popover</fullName>
    <active>true</active>
    <label>Popover</label>
</RecordType>