force-app/main/default/objects/lightningbuddy__Actions__c/recordTypes/lightningbuddy__Rich_Text.recordType-meta.xml
<RecordType>
    <fullName>lightningbuddy__Rich_Text</fullName>
    <active>true</active>
    <label>Rich Text</label>
</RecordType>