force-app/main/default/objects/lightningbuddy__Actions__c/recordTypes/lightningbuddy__Toaster_Alert.recordType-meta.xml
<RecordType>
    <fullName>lightningbuddy__Toaster_Alert</fullName>
    <active>true</active>
    <label>Toaster Alert</label>
</RecordType>