force-app/main/default/objects/lightningbuddy__Actions__c/recordTypes/lightningbuddy__Video.recordType-meta.xml
<RecordType>
    <fullName>lightningbuddy__Video</fullName>
    <active>true</active>
    <label>Video</label>
</RecordType>