force-app/main/default/objects/lightningbuddy__Actions__c/recordTypes/lightningbuddy__Welcome_Mat.recordType-meta.xml
<RecordType>
    <fullName>lightningbuddy__Welcome_Mat</fullName>
    <active>true</active>
    <label>Welcome Mat</label>
</RecordType>