force-app/main/default/objects/lightningbuddy__Actions__c/listViews/lightningbuddy__All.listView-meta.xml
<ListView>
    <fullName>lightningbuddy__All</fullName>
    <columns>NAME</columns>
    <columns>lightningbuddy__Object__c</columns>
    <columns>lightningbuddy__Page_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>